custom Directives and custom piplines

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 <app-navbar></app-navbar>
 <div class="container">
     <div class="row p-4">
-        <div class="col-md-4"> <app-sidebar></app-sidebar></div>
-        <div class="col-md-6"> <app-main></app-main></div>
+        <app-product class="col-sm-12"></app-product>
+        <!-- <div class="col-md-10"> <app-main></app-main></div> -->
     </div>
 </div>
 <app-footer></app-footer>
