--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,5 +1,7 @@
 <div class="row row-cols-2 row-cols-md-3 g-4 ">
 
-    <app-product></app-product>
+    
 
 </div>
+
+<!-- <app-products-list [listFilterInChild]="listFilter" (newPrdEvent)="CartFunc($event)"></app-products-list> -->
