--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
 <app-navbar></app-navbar>
 <div class="container">
     <div class="row p-4">
-        <app-product class="col-sm-12"></app-product>
+        <!-- <app-product class="col-sm-12"></app-product> -->
         <!-- <div class="col-md-10"> <app-main></app-main></div> -->
+        <app-parent-component></app-parent-component>
     </div>
 </div>
 <app-footer></app-footer>
