--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,12 +17,10 @@
 
             <div class="nav-container">
                 <ul class="nav-tabs">
-                    <li class="nav-tab">Home</li>
-                    <li class="nav-tab">Products</li>
-                    <li class="nav-tab">Services</li>
-                    <li class="nav-tab">FAQ</li>
-                    <li class="nav-tab">Contact</li>
-                    <li class="nav-tab">Careers</li>
+                    <li class="nav-tab"><a routerLink="/Home">Home</a></li>
+                    <li class="nav-tab"><a routerLink="/aboutus">About</a></li>
+                    <li class="nav-tab"><a routerLink="/productparent">products</a></li>
+                    <li class="nav-tab"><a routerLink="/contactus">Contact us</a></li>
                 </ul>
             </div>
         </nav>
