--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
     <div class="row p-4">
         <!-- <app-product class="col-sm-12"></app-product> -->
         <!-- <div class="col-md-10"> <app-main></app-main></div> -->
-        <app-parent-component></app-parent-component>
+        <!-- <app-parent-component></app-parent-component> -->
+        <router-outlet></router-outlet>
+
     </div>
 </div>
 <app-footer></app-footer>
