--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,3 @@
-<div class="row row-cols-2 row-cols-md-3 g-4 ">
-
-    
-
+<div class="continaer">
+    <h2 class="fs-4 bg-black p-5 text-center text-white"> Main page </h2>
 </div>
-
-<!-- <app-products-list [listFilterInChild]="listFilter" (newPrdEvent)="CartFunc($event)"></app-products-list> -->
