adding the services and also the product details

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,6 +21,9 @@
                     <li class="nav-tab"><a routerLink="/aboutus">About</a></li>
                     <li class="nav-tab"><a routerLink="/productparent">products</a></li>
                     <li class="nav-tab"><a routerLink="/contactus">Contact us</a></li>
+                    <li class="nav-tab"><a routerLink="/user/login">login</a></li>
+                    <li class="nav-tab"><a routerLink="/user/veiwprofile">viewProfile</a></li>
+                    <li class="nav-tab"><a routerLink="/user/editprofile">edit profile</a></li>
                 </ul>
             </div>
         </nav>
