--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,3 +1,50 @@
-<div class="continaer">
-    <h2 class="fs-4 bg-black p-5 text-center text-white"> ProductDetails page </h2>
+<div class="container">
+
+    <div class="row mb-4">
+        <div class="col-sm-6">
+            <h3>
+                <ng-container [ngSwitch]="product?.quantity">
+                    <ng-container *ngSwitchCase="0">Out Of Stock</ng-container>
+                    <ng-container *ngSwitchCase="1">Last one Item!</ng-container>
+                    <ng-container *ngSwitchCase="2">Last 2 Item!</ng-container>
+                    <ng-container *ngSwitchCase="3">Last 3 Item!</ng-container>
+                    <ng-container *ngSwitchDefault>In Stock</ng-container>
+                </ng-container>
+            </h3>
+            <img [src]="product?.image" class="img-fluid">
+        </div>
+        <div class="col-sm-6">
+
+            <h2 class="text-danger">Products Details</h2>
+            <h3 class="text-primary">{{product?.name}}</h3>
+            <h3>{{product?.details}}</h3>
+            <h5>Price: {{product?.price}}</h5>
+            <!-- <h5>Material: {{product?.Material}}</h5> -->
+
+        </div>
+    </div>
 </div>
+
+<button class="button-91" (click)="backFunc()">Back</button>
+<div class="d-flex justify-content-center" role="group" aria-label="Basic example">
+    <button class="border-0" (click)="previousFunc()" [disabled]="currentProductID==productsIDSList[0]"><i
+            class="fa-solid fa-angles-left fs-4 text-primary"></i></button>
+    <button class="border-0" (click)="nextFunc()"
+        [disabled]="currentProductID==productsIDSList[productsIDSList.length-1]"><i
+            class="fa-solid fa-angles-right fs-4"></i></button>
+</div>
+
+
+<!-- Second way -->
+<!-- <div class="container">
+  
+    <div class="row" *ngIf="product">
+      <div class="col-sm-6">
+        <img [src]="product.PrdimgURL" alt="">
+      </div>
+      <div class="col-sm-6">
+  
+        <h2>{{product.name}}</h2>
+      </div>
+    </div>
+  </div> -->
