--- a/src/app/components/parent-component/parent-component.component.html
+++ b/src/app/components/parent-component/parent-component.component.html
@@ -9,40 +9,16 @@
     <div>
         Filter By Price :
         <select [(ngModel)]="priceFiltervlaue">
-            <option *ngFor="let price of   priceFilter" [value]="price.name">{{price.name[0]}} - {{price.name[1]}}
+            <option *ngFor="let price of priceFilter" [value]="price">{{price[0]}} - {{price[1]}}
             </option>
         </select>
     </div>
-    <div>
+    <!-- <div>
         <label for="Search"> <input type="search" placeholder="Searcg about product " [(ngModel)]="searchFilter">
         </label>
-    </div>
+    </div> -->
 </div>
 
 <app-product [filterCategoryInChild]="selectedCategory" [filterByPriceInChild]="priceFiltervlaue"
-    (_EventEmitter)="cartFun($event)"></app-product>
+    (_EventEmitter)="addToCart($event)"></app-product>
 
-
-<table class="table table-dark">
-    <thead>
-        <tr>
-
-            <th scope="col">name</th>
-            <th scope="col">price</th>
-            <th scope="col">count</th>
-            <th scope="col">total</th>
-            <th scope="col">Delete</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let prd of  cart">
-
-            <td>{{prd.name}}</td>
-            <td>{{prd.price}}</td>
-            <td>{{prd.quantity}}</td>
-            <td>{{prd.price * prd.quantity}}</td>
-            <td><button class="btn btn-danger" (click)="deleteProduct(prd)">Delete </button></td>
-
-        </tr>
-    </tbody>
-</table>
