--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,6 +26,9 @@
                     <li class="nav-tab"><a routerLink="/user/editprofile">edit profile</a></li>
                     <li class="nav-tab"><a routerLink="/userLogIn" [hidden]="isLoged">LogIn</a></li>
                     <li class="nav-tab"><a routerLink="/userLogOut" [hidden]="!isLoged">logout </a></li>
+                    <li class="nav-tab"><a routerLink="/UserReactiveForm">User Reactive</a></li>
+                    <li class="nav-tab"><a routerLink="/admin">Admin</a></li>
+
                 </ul>
             </div>
         </nav>
